// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiComboBox is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="aria-label"
    class="ouiComboBox testClass1 testClass2"
    data-test-subj="test subject string"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props autoFocus is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
              <button
                aria-label="Remove Mimas from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Mimas from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Dione"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Dione
              </span>
              <button
                aria-label="Remove Dione from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Dione from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props custom icon is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiComboBoxPill ouiComboBoxIcon"
            data-ouiicon-type="menu"
            data-test-subj="comboBoxIcon"
          />
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
              <button
                aria-label="Remove Mimas from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Mimas from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props delimiter is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
              <button
                aria-label="Remove Mimas from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Mimas from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Dione"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Dione
              </span>
              <button
                aria-label="Remove Dione from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Dione from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props full width is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox ouiComboBox--fullWidth"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap--fullWidth ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
              <button
                aria-label="Remove Mimas from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Mimas from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props icon is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiComboBoxPill ouiComboBoxIcon"
            data-ouiicon-type="search"
            data-test-subj="comboBoxIcon"
          />
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
              <button
                aria-label="Remove Mimas from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Mimas from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props isClearable=false disallows user from clearing input when no options are selected 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props isClearable=false disallows user from clearing input when options are selected 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
              <button
                aria-label="Remove Mimas from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Mimas from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Iapetus"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Iapetus
              </span>
              <button
                aria-label="Remove Iapetus from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Iapetus from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props isDisabled is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox ouiComboBox-isDisabled"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              disabled=""
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props options list is rendered 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    class="ouiComboBox ouiComboBox-isOpen"
    data-test-subj="alsoGetsAppliedToOptionsList"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls="generated-id_listbox"
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
          <span
            aria-live="assertive"
            class="ouiScreenReaderOnly"
            id="generated-id"
          >
            Combo box. Selected. Combo box input.  Type some text or, to display a list of choices, press Down Arrow. To exit the list of choices, press Escape.
          </span>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Close list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiComboBoxOptionsList ouiPopover__panel ouiPopover__panel-isAttached ouiPopover__panel-noArrow ouiPopover__panel-isOpen ouiPopover__panel--bottom"
      data-test-subj="comboBoxOptionsList alsoGetsAppliedToOptionsList-optionsList"
      style="z-index: 100;"
    >
      <div
        class="ouiComboBoxOptionsList__rowWrap"
      >
        <div
          style="position: relative; height: 200px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            id="generated-id_listbox"
            role="listBox"
            style="height: 290px; width: 100%;"
            tabindex="0"
          >
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              data-test-subj="titanOption"
              id="generated-id__option-0"
              role="option"
              style="position: absolute; left: 0px; top: 0px; height: 29px; width: 100%;"
              title="Titan"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Titan
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-1"
              role="option"
              style="position: absolute; left: 0px; top: 29px; height: 29px; width: 100%;"
              title="Enceladus"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Enceladus
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-2"
              role="option"
              style="position: absolute; left: 0px; top: 58px; height: 29px; width: 100%;"
              title="Mimas"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Mimas
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-3"
              role="option"
              style="position: absolute; left: 0px; top: 87px; height: 29px; width: 100%;"
              title="Dione"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Dione
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-4"
              role="option"
              style="position: absolute; left: 0px; top: 116px; height: 29px; width: 100%;"
              title="Iapetus"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Iapetus
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-5"
              role="option"
              style="position: absolute; left: 0px; top: 145px; height: 29px; width: 100%;"
              title="Phoebe"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Phoebe
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-6"
              role="option"
              style="position: absolute; left: 0px; top: 174px; height: 29px; width: 100%;"
              title="Rhea"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Rhea
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-7"
              role="option"
              style="position: absolute; left: 0px; top: 203px; height: 29px; width: 100%;"
              title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-8"
              role="option"
              style="position: absolute; left: 0px; top: 232px; height: 29px; width: 100%;"
              title="Tethys"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Tethys
                    </span>
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props selectedOptions are rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
              <button
                aria-label="Remove Mimas from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Mimas from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconRight ouiComboBoxPill"
            title="Iapetus"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Iapetus
              </span>
              <button
                aria-label="Remove Iapetus from selection in this group"
                class="ouiBadge__iconButton"
                title="Remove Iapetus from selection in this group"
                type="button"
              >
                <span
                  class="ouiBadge__icon"
                  color="inherit"
                  data-ouiicon-type="cross"
                  tabindex="-1"
                />
              </button>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props singleSelection is rendered 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="ouiComboBox"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap--noWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Open list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props singleSelection prepend and append is rendered 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    class="ouiComboBox ouiComboBox-isOpen"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout ouiFormControlLayout--group"
    >
      <label
        class="ouiFormLabel ouiFormControlLayout__prepend"
      >
        String
      </label>
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap--noWrap ouiComboBox__inputWrap-isClearable ouiComboBox__inputWrap--inGroup"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls="generated-id_listbox"
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
          <span
            aria-live="assertive"
            class="ouiScreenReaderOnly"
            id="generated-id"
          >
            Combo box. Selected. Combo box input.  Type some text or, to display a list of choices, press Down Arrow. To exit the list of choices, press Escape.
          </span>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Close list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
      <label
        class="ouiFormLabel ouiFormControlLayout__append"
      >
        String
      </label>
    </div>
    <div
      class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiComboBoxOptionsList ouiPopover__panel ouiPopover__panel-isAttached ouiPopover__panel-noArrow ouiPopover__panel-isOpen ouiPopover__panel--bottom"
      data-test-subj="comboBoxOptionsList "
      style="z-index: 100;"
    >
      <div
        class="ouiComboBoxOptionsList__rowWrap"
      >
        <div
          style="position: relative; height: 200px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            id="generated-id_listbox"
            role="listBox"
            style="height: 290px; width: 100%;"
            tabindex="0"
          >
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              data-test-subj="titanOption"
              id="generated-id__option-0"
              role="option"
              style="position: absolute; left: 0px; top: 0px; height: 29px; width: 100%;"
              title="Titan"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Titan
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-1"
              role="option"
              style="position: absolute; left: 0px; top: 29px; height: 29px; width: 100%;"
              title="Enceladus"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Enceladus
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-2"
              role="option"
              style="position: absolute; left: 0px; top: 58px; height: 29px; width: 100%;"
              title="Mimas"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Mimas
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-3"
              role="option"
              style="position: absolute; left: 0px; top: 87px; height: 29px; width: 100%;"
              title="Dione"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Dione
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-4"
              role="option"
              style="position: absolute; left: 0px; top: 116px; height: 29px; width: 100%;"
              title="Iapetus"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Iapetus
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-5"
              role="option"
              style="position: absolute; left: 0px; top: 145px; height: 29px; width: 100%;"
              title="Phoebe"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Phoebe
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-6"
              role="option"
              style="position: absolute; left: 0px; top: 174px; height: 29px; width: 100%;"
              title="Rhea"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Rhea
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-7"
              role="option"
              style="position: absolute; left: 0px; top: 203px; height: 29px; width: 100%;"
              title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-8"
              role="option"
              style="position: absolute; left: 0px; top: 232px; height: 29px; width: 100%;"
              title="Tethys"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Tethys
                    </span>
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props singleSelection selects existing option when opened 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    class="ouiComboBox ouiComboBox-isOpen"
    role="combobox"
  >
    <div
      class="ouiFormControlLayout"
    >
      <div
        class="ouiFormControlLayout__childrenWrapper"
      >
        <div
          class="ouiComboBox__inputWrap ouiComboBox__inputWrap--noWrap ouiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <span
            class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiComboBoxPill"
            title="Mimas"
          >
            <span
              class="ouiBadge__content"
            >
              <span
                class="ouiBadge__text"
              >
                Mimas
              </span>
            </span>
          </span>
          <div
            class="ouiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls="generated-id_listbox"
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
          <span
            aria-live="assertive"
            class="ouiScreenReaderOnly"
            id="generated-id"
          >
            Combo box. Selected. Mimas. Press Backspace to delete Mimas. Combo box input.  Type some text or, to display a list of choices, press Down Arrow. To exit the list of choices, press Escape.
          </span>
        </div>
        <div
          class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="ouiFormControlLayoutClearButton"
            data-test-subj="comboBoxClearButton"
            type="button"
          >
            <span
              class="ouiFormControlLayoutClearButton__icon"
              data-ouiicon-type="cross"
            />
          </button>
          <button
            aria-label="Close list of options"
            class="ouiFormControlLayoutCustomIcon ouiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiFormControlLayoutCustomIcon__icon"
              data-ouiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow ouiComboBoxOptionsList ouiPopover__panel ouiPopover__panel-isAttached ouiPopover__panel-noArrow ouiPopover__panel-isOpen ouiPopover__panel--bottom"
      data-test-subj="comboBoxOptionsList "
      style="z-index: 100;"
    >
      <div
        class="ouiComboBoxOptionsList__rowWrap"
      >
        <div
          style="position: relative; height: 200px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            id="generated-id_listbox"
            role="listBox"
            style="height: 290px; width: 100%;"
            tabindex="0"
          >
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              data-test-subj="titanOption"
              id="generated-id__option-0"
              role="option"
              style="position: absolute; left: 0px; top: 0px; height: 29px; width: 100%;"
              title="Titan"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Titan
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-1"
              role="option"
              style="position: absolute; left: 0px; top: 29px; height: 29px; width: 100%;"
              title="Enceladus"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Enceladus
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-2"
              role="option"
              style="position: absolute; left: 0px; top: 58px; height: 29px; width: 100%;"
              title="Mimas"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    color="text"
                    data-ouiicon-type="check"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Mimas
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-3"
              role="option"
              style="position: absolute; left: 0px; top: 87px; height: 29px; width: 100%;"
              title="Dione"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Dione
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-4"
              role="option"
              style="position: absolute; left: 0px; top: 116px; height: 29px; width: 100%;"
              title="Iapetus"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Iapetus
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-5"
              role="option"
              style="position: absolute; left: 0px; top: 145px; height: 29px; width: 100%;"
              title="Phoebe"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Phoebe
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-6"
              role="option"
              style="position: absolute; left: 0px; top: 174px; height: 29px; width: 100%;"
              title="Rhea"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Rhea
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-7"
              role="option"
              style="position: absolute; left: 0px; top: 203px; height: 29px; width: 100%;"
              title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                    </span>
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ouiFilterSelectItem"
              id="generated-id__option-8"
              role="option"
              style="position: absolute; left: 0px; top: 232px; height: 29px; width: 100%;"
              title="Tethys"
              type="button"
            >
              <span
                class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
              >
                <div
                  class="ouiFlexItem ouiFlexItem--flexGrowZero"
                >
                  <span
                    data-ouiicon-type="empty"
                  />
                </div>
                <span
                  class="ouiFlexItem ouiFilterSelectItem__content"
                >
                  <span
                    class="ouiComboBoxOption__contentWrapper"
                  >
                    <span
                      class="ouiComboBoxOption__content"
                    >
                      Tethys
                    </span>
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
